[package]
name = "flat_table"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
dhat = "0.3.3"
foldhash = "0.1.5"
random = "0.14.0"
simd-itertools = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "map_benchmarks"
harness = false
